<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.HomeFragment" android:id="@+id/frameLayout">

    <!--Androidx Constraint Layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginRight="16dp">
            <TextView
                    android:text="@string/company_text_string"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_company"
                    style="@style/header"/>

            <TextView
                    android:text="@string/enter_company_information_string"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_company_info"
                    android:textColor="@color/colorPrimaryDark" style="@style/smallTextField"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_string"
                        android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_string"
                        android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <ImageView android:layout_width="0dp" android:layout_height="wrap_content"
                   android:src="@drawable/line_grey" android:id="@+id/imageView2"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintVertical_bias="0.0"
                   app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                   android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout_product"
                   android:layout_marginTop="16dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/linearLayout_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
            <TextView
                    android:text="@string/module_string"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_product"
                    style="@style/header"/>

            <TextView
                    android:text="@string/product_info_string"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_product_info"
                    android:textColor="@color/colorPrimaryDark" style="@style/smallTextField"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>