<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity" android:background="@color/colorPrimary">


    <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp" app:srcCompat="@drawable/ruler"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.659"
            app:layout_constraintBottom_toTopOf="@+id/textView" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/led_screen_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/font" android:textSize="36sp"
            android:textColor="#FDFDFE" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/calculator_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.568" android:fontFamily="@font/font" android:textSize="30sp"
            android:textColor="#FDFDFE" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/version_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613" android:textSize="16sp" android:fontFamily="@font/font"
            android:textColor="#FDFDFE" app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/start_button_string"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_start"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.946"
            android:fontFamily="@font/font"
            android:textColor="@color/colorAccent"
            android:background="@color/greyColor"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/copy_tgs_group_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="1.0"
            android:textColor="#FDC301"/>

    <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spash_progress_bar"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/yellowColor"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.787"
            android:visibility="gone"/>
    <TextView
            android:text="@string/please_wait_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_wait"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.942"
            android:visibility="gone" android:fontFamily="@font/font" android:textColor="@color/colorAccent"
            android:textSize="20sp" android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>