<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.AboutFragment">


    <!--Androidx Constraint Layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="150dp"
                android:layout_height="150dp" android:id="@+id/imageView_logo"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/todo"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.13"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_appName"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.376"
                android:textSize="20sp" android:fontFamily="@font/font"
                android:textStyle="bold" app:layout_constraintHorizontal_bias="0.5"
        />
        <TextView
                android:text="@string/version_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_version"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.439" android:textSize="18sp"
                android:fontFamily="@font/font"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/app_review_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.566"
                android:textSize="18sp" android:fontFamily="@font/font"
                android:textStyle="bold" app:layout_constraintHorizontal_bias="0.5"
        />
        <TextView
                android:text="@string/content_text_view_string"
                android:layout_width="304dp"
                android:layout_height="127dp" android:id="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintVertical_bias="0.734"
                android:textSize="18sp" android:fontFamily="@font/font" android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/developed_by_tgs_group_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.946" android:textSize="18sp" android:textStyle="bold"
                android:fontFamily="@font/font"
                android:textColor="@color/colorPrimary" app:layout_constraintHorizontal_bias="0.5"
        />
        <TextView
                android:text="@string/copy_tgs_group_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.988"
                android:textStyle="bold"
                android:fontFamily="@font/font"
                android:textColor="@color/colorPrimary" app:layout_constraintHorizontal_bias="0.5"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>